implement ComptabilityChecker and ComptabilityManager with unit tests